[gd_scene load_steps=10 format=3 uid="uid://qgub06sgnvml"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_bpepw"]
[ext_resource type="Texture2D" uid="uid://drgp18whtsyeg" path="res://icon.svg" id="2_krkth"]
[ext_resource type="Script" path="res://scripts/weapons/weapon_manager.gd" id="3_8meis"]
[ext_resource type="Script" path="res://scripts/ui/player_ui.gd" id="4_vdean"]
[ext_resource type="PackedScene" uid="uid://i2rvom7p2l2f" path="res://nodes/components/health_component.tscn" id="5_uqubr"]
[ext_resource type="Script" path="res://scripts/ui/weapon_slots.gd" id="5_xljkp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b7jsc"]
radius = 26.0192

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_i0rdp"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Node2D:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_e31mc"]
radius = 45.0444

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_bpepw")

[node name="Node2D" type="Node2D" parent="."]

[node name="WeaponManager" type="Node2D" parent="Node2D"]
unique_name_in_owner = true
position = Vector2(38, 0)
script = ExtResource("3_8meis")

[node name="SwitchCooldownTimer" type="Timer" parent="Node2D/WeaponManager"]
wait_time = 0.3

[node name="SlowTimer" type="Timer" parent="Node2D/WeaponManager"]

[node name="Sprite2D" type="Sprite2D" parent="Node2D"]
position = Vector2(3.09944e-06, 3.58711e-06)
scale = Vector2(0.40176, 0.374369)
texture = ExtResource("2_krkth")

[node name="Name" type="Label" parent="."]
z_index = 10
offset_left = -23.0
offset_top = -49.0
offset_right = 24.0
offset_bottom = -26.0
text = "Name"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_b7jsc")

[node name="Camera2D" type="Camera2D" parent="."]
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
drag_bottom_margin = 0.1

[node name="UI" type="CanvasLayer" parent="Camera2D"]
script = ExtResource("4_vdean")

[node name="Ammo" type="Label" parent="Camera2D/UI"]
offset_left = 1078.0
offset_top = 615.0
offset_right = 1131.0
offset_bottom = 638.0
text = "AMMO"

[node name="Health" type="Label" parent="Camera2D/UI"]
offset_left = 20.0
offset_top = 608.0
offset_right = 82.0
offset_bottom = 631.0
text = "HEALTH"

[node name="DashCooldownIndicator" type="ProgressBar" parent="Camera2D/UI"]
offset_left = 153.0
offset_top = 605.0
offset_right = 293.0
offset_bottom = 632.0
max_value = 1.0
show_percentage = false

[node name="WeaponSlots" type="Control" parent="Camera2D/UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_xljkp")

[node name="Slot1" type="Label" parent="Camera2D/UI/WeaponSlots"]
layout_mode = 0
offset_left = 22.0
offset_top = 527.0
offset_right = 62.0
offset_bottom = 550.0
text = "1. Epmty"

[node name="Slot2" type="Label" parent="Camera2D/UI/WeaponSlots"]
layout_mode = 0
offset_left = 22.0
offset_top = 549.0
offset_right = 62.0
offset_bottom = 572.0
text = "2. Empty"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_i0rdp")

[node name="HealthComponent" parent="." instance=ExtResource("5_uqubr")]
visible = false

[node name="Hitbox" type="Area2D" parent="HealthComponent" groups=["hitbox"]]

[node name="HitboxZone" type="CollisionShape2D" parent="HealthComponent/Hitbox"]
shape = SubResource("CircleShape2D_e31mc")

[node name="HealTimer" type="Timer" parent="HealthComponent"]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="Node2D/WeaponManager/SwitchCooldownTimer" to="Node2D/WeaponManager" method="_on_switch_cooldown_timer_timeout"]
[connection signal="timeout" from="Node2D/WeaponManager/SlowTimer" to="Node2D/WeaponManager" method="_on_slow_timer_timeout"]
[connection signal="timeout" from="HealthComponent/HealTimer" to="HealthComponent" method="_on_heal_timer_timeout"]
